Fix a misstatement found by a customer (Ticket 1087).

--- a/prince/helpfiles/locale/en-us/cd05-04-workwithmath.xhtml
+++ b/prince/helpfiles/locale/en-us/cd05-04-workwithmath.xhtml
@@ -606,7 +606,7 @@ display, formatting the size and position of mathematical elements appropriately
 <sectiontitle>About Automatic Equation Numbers</sectiontitle> 
 <bodyText><indexitem req="varioref"><prisec>numbered equations</prisec></indexitem>SWP,
 SW, and SNB can automatically number the displayed <indexitem req="varioref"><prisec>equations!numbering</prisec></indexitem>equations
-in your document. By default, the program numbers displayed equations, but
+in your document. By default, the program numbers displayed equations on the right, but
 you can change the default using the Document Format dialog box. </bodyText>
 
 <bodyText><msidisplay><math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
