Update help files to show Ctrl+Alt+= as the New Definition keyboard shortcut.

--- a/prince/helpfiles/locale/en-us/dm13-02-doing_mathematics.xhtml
+++ b/prince/helpfiles/locale/en-us/dm13-02-doing_mathematics.xhtml
@@ -79,7 +79,7 @@ Compute Menu Commands</h2>
 </td>
 <td>Definitions &gt; New Definition<br />
 </td>
-<td>Ctrl+=</td>
+<td>Ctrl+Alt+=</td>
 </tr>
 <tr>
 <td>
